# compiler-c

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  bytecode.h  chunk.c  chunk.h  codegen.c  codegen.h  ebnf.txt  evaluator.c  evaluator.h  lexer.c  lexer.h  main.c  parser.c  parser.h  symbol_table.c  symbol_table.h  value.c  value.h  vm.c  vm.h
src/: main.c
src/compiler/: codegen.c  codegen.h  evaluator.h  symbol_table.c  symbol_table.h
src/runtime/: bytecode.h  value.c  vm.c
src/syntax/: ast.c  ast.h  lexer.c  lexer.h  parser.c
tests/: break_check.txt  continue_test.txt  error.txt  if_check.txt  input.txt  logical_check.txt  relation_check.txt  scope_error_test.txt  scope_test.txt  string_concat.txt  t1.txt  t2.txt  t3.txt  while_check.txt
